--- a/Index.html
+++ b/Index.html
@@ -43,12 +43,20 @@
         </div>
     </section>
     
-    <div class="sskills">
+    <div class="skills">
         <div class="aboutme">
             <h2>Skills</h2>
         <h5>Dev<span>eloper</span></h5>
         <p>I am a c# developer and I know Html ,Css and Javascript</p>
+        </div>
+    </div>
 
+    <div class="contact">
+        <div class="aboutme">
+            <h2></h2>
+        <h5>Con<span>tact</span></h5>
+        <p>Email</p>
+        <p>PhoneNumber</p>
         </div>
     </div>
 
